--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "animation": "^0.1.3",
     "axios": "^0.27.2",
     "firebase": "^9.7.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-firebase-hooks": "^5.0.3",
     "react-hook-form": "^7.30.0",
+    "react-load-animations": "^1.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "ripple-effects": "^1.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
