react carousel,invertory, pagination
Home Hero React VideoPlayer..
Home Brand add With react .
Home Top Cars.
Home Services.
Invertory
Invetory Data
inventory Paginations

--- a/package.json
+++ b/package.json
@@ -13,13 +13,19 @@
     "axios": "^0.27.2",
     "firebase": "^9.7.0",
     "react": "^18.1.0",
+    "react-alice-carousel": "^2.6.0",
     "react-dom": "^18.1.0",
     "react-firebase-hooks": "^5.0.3",
+    "react-grid-carousel": "^1.0.1",
     "react-hook-form": "^7.30.0",
     "react-load-animations": "^1.0.2",
+    "react-multi-carousel": "^2.8.0",
+    "react-player": "^2.10.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "ripple-effects": "^1.0.2",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
