--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-toastify": "^9.0.1",
     "ripple-effects": "^1.0.2",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
