--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@testing-library/user-event": "^13.5.0",
     "animation": "^0.1.3",
     "axios": "^0.27.2",
+    "bootstrap": "^5.1.3",
     "firebase": "^9.7.0",
     "react": "^18.1.0",
     "react-alice-carousel": "^2.6.0",
+    "react-bootstrap": "^2.3.1",
     "react-dom": "^18.1.0",
     "react-firebase-hooks": "^5.0.3",
     "react-grid-carousel": "^1.0.1",
