--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.1.0",
     "react-firebase-hooks": "^5.0.3",
     "react-grid-carousel": "^1.0.1",
+    "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.30.0",
     "react-load-animations": "^1.0.2",
     "react-multi-carousel": "^2.8.0",
