--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "firebase": "^9.7.0",
+    "jsonwebtoken": "^8.5.1",
     "react": "^18.1.0",
     "react-alice-carousel": "^2.6.0",
     "react-bootstrap": "^2.3.1",
