--- a/package.json
+++ b/package.json
@@ -14,10 +14,9 @@
     "bootstrap": "^5.1.3",
     "firebase": "^9.7.0",
     "jsonwebtoken": "^8.5.1",
-    "react": "^18.1.0",
-    "react-alice-carousel": "^2.6.0",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.3.1",
-    "react-dom": "^18.1.0",
+    "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.0.3",
     "react-grid-carousel": "^1.0.1",
     "react-helmet-async": "^1.3.0",
@@ -25,7 +24,7 @@
     "react-load-animations": "^1.0.2",
     "react-multi-carousel": "^2.8.0",
     "react-player": "^2.10.0",
-    "react-router-dom": "^6.3.0",
+    "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.0.1",
@@ -59,6 +58,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.5",
+    "dotenv": "^16.4.5",
     "postcss": "^8.4.13",
     "tailwindcss": "^3.0.24"
   }
