--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "client-side-warehouse-management",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
+    "16": "^0.0.2",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
